Sort out db, add knesset masking
