# api/swagger.json
@@ -9,22 +9,22 @@
     "host": "localhost:3000",
     "basePath": "/api",
     "paths": {
-        "/new_user": {
+        "/users": {
             "post": {
                 "x-swagger-router-controller": "User",
                 "operationId": "addUser",
                 "description": "Register a new user to the notification system",
                 "parameters": [
                 {
-                    "name": "user_name",
-                    "in": "formData",
+                    "name": "name",
+                    "in": "query",
                     "description": "the user name",
                     "required": true,
                     "type": "string"
                 },
                 {
                     "name": "id",
-                    "in": "formData",
+                    "in": "query",
                     "description": "the user ID",
                     "required": true,
                     "type": "string"
@@ -114,7 +114,7 @@
                 }
             }
         },
-        "/remark": {
+        "/remarks": {
             "post": {
                 "x-swagger-router-controller": "UserActions",
                 "operationId": "addRemark",
@@ -122,14 +122,14 @@
                 "parameters": [
                 {
                     "name": "committee_id",
-                    "in": "formData",
+                    "in": "query",
                     "description": "commitee ID",
                     "required": true,
                     "type": "string"
                 },
                 {
                     "name": "remark",
-                    "in": "formData",
+                    "in": "query",
                     "description": "user remark on the commitee",
                     "required": true,
                     "type": "string"
@@ -180,16 +180,16 @@
                 }
             }
         },
-        "/sessions_of_subjects": {
+        "/session_subjects": {
             "get": {
                 "x-swagger-router-controller": "SessionSubject",
-                "operationId": "getSessions",
-                "description": "get sessions of subject",
+                "operationId": "getSubjects",
+                "description": "get subjects of a session",
                 "parameters": [
                 {
                     "name": "subjects",
                     "in": "query",
-                    "description": "retrive the sessions connected to the subjects",
+                    "description": "retrieve the sessions connected to the subjects",
                     "required": true,
                     "type": "array",
                     "items":{
@@ -207,7 +207,7 @@
                     "200": {
                         "description": "sessions list.",
                         "schema": {
-                        "$ref": "#/definitions/Sessions"
+                        "$ref": "#/definitions/Subjects"
                         }
                     }
                 }
@@ -219,15 +219,15 @@
                 "parameters": [
                 {
                     "name": "subject",
-                    "in": "formData",
                     "description": "subject",
+                    "in": "query",
                     "required": true,
                     "type": "string"
                 },
                 {
                     "name": "session_id",
-                    "in": "formData",
                     "description": "id of the session",
+                    "in": "query",
                     "required": true,
                     "type": "string"
                 }
@@ -247,37 +247,44 @@
                     }
                 }
                 }
-            }
-        },
-        "/subjects_of_sessions": {
-            "get": {
+            },
+            "delete": {
                 "x-swagger-router-controller": "SessionSubject",
-                "operationId": "getSubjects",
-                "description": "get subjects of session",
+                "operationId": "deleteSessionSubject",
+                "description": "remove session and subject connection",
                 "parameters": [
                 {
-                    "name": "session_id",
                     "in": "query",
-                    "description": "retrive the subjects connected to the session",
+                    "name": "subject",
+                    "description": "subject",
                     "required": true,
-                    "type": "string",
+                    "type": "string"
+                },
+                {
+                    "in": "query",
+                    "name": "session_id",
+                    "description": "id of the session",
+                    "required": true,
+                    "type": "string"
                 }
                 ],
+                
                 "responses": {
-                    "default": {
-                        "description": "Invalid request.",
-                        "schema": {
-                        "$ref": "#/definitions/Error"
-                        }
-                    },
-                    "200": {
-                        "description": "sessions list.",
-                        "schema": {
-                        "$ref": "#/definitions/Subjects"
-                        }
+                "default": {
+                    "description": "Invalid request.",
+                    "schema": {
+                    "$ref": "#/definitions/Error"
+                    }
+                },
+                "200": {
+                    "description": "Session/subject link removed successfuly.",
+                    "schema": {
+                        "$ref": "#/definitions/Success"
                     }
                 }
-            },
+                }
+            }
+        }
     },
     "definitions": {
       "Subjects": {
